add generate vpn link to vpn-service api
